Updated files with Docker commands

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -142,3 +142,7 @@ services:
       - ksqldb-server
     entrypoint: /bin/sh
     tty: true
+networks:
+  default:
+    external: true
+    name: alert-network
